# Audiencegrading-

./: .env.example  .gitignore  AI_HANDOFF.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  configuration.md  scoring.md
nichefit/: __init__.py  __main__.py  app.py  config.py
nichefit/data/: __init__.py  apify.py  cache.py  mock.py
nichefit/scoring/: __init__.py  cost.py  engine.py  prompts.py  scorer.py
nichefit/web/: index.html
tests/: conftest.py  test_api.py  test_cost.py  test_engine.py  test_handles.py  test_rubric.py  test_scorer.py
